Fixed overflow

--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,7 @@
   margin: 0;
   padding: 0;
   flex-wrap: wrap;
+  /* overflow-x: hidden; */
 }
 
 body {
@@ -13,7 +14,7 @@ nav {
   justify-content: space-around;
   align-items: center;
   min-height: 3rem;
-  padding: 10px;
+  padding: 10px 0;
   width: 100%;
 }
 
@@ -103,7 +104,7 @@ main hr {
 }
 
 .footer-div {
-  padding: 1.5rem;
+  padding: 1.5rem 0;
   display: flex;
   justify-content: space-around;
   margin: 1rem 0 0 0;
@@ -183,7 +184,7 @@ footer h1 {
 
   .footer-div .first-footer,
   .first-footer h1 {
-    width: 100vw;
+    width: 90%;
     text-align: center;
   }
 
